[project]
name = "kaggle-icecube"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "graphnet",
    "jammy-flows",
    "pytorch-lightning>=2.5.0.post0",
    "torch-scatter",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
    "torch-sparse",
]

[tool.uv.sources]
graphnet = { git = "https://github.com/graphnet-team/graphnet" }
jammy-flows = { git = "https://github.com/thoglu/jammy_flows" }
torch-scatter = { git = "https://github.com/rusty1s/pytorch_scatter.git" }
torch-sparse = { git = "https://github.com/rusty1s/pytorch_sparse.git" }
